@@ -1,5 +1,6 @@
 Changes in 1.17.1:
  * Allow coloured points for non-orthogonal plots (polar, ternary)
+ * Remove unnecessary exception data
 
 Bug fixes:
  * Fix Print dialog
